# duck-lang

./: .gitmodules  CLAUDE.md  Cargo.toml  How To Make Your Own Library.md  README.md  TODO.md  install.sh  suggestions.md  syntax.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  builtins.md  cli.md  common-mistakes.md  control-flow.md  file-io.md  functions.md  getting-started.md  http-and-json.md  libraries.md  strings.md  structs-and-lists.md  syntax.md  variables-and-types.md
examples/: bot.duck  countdown.duck  fizzbuzz.duck  hello.duck  phase2_demo.duck  pond.duck
libs/: discord.duck
projects/pond/: game.duck
src/: ast.rs  builtins.rs  goose.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  values.rs
