[package]
name = "duck-lang"
version = "0.1.0"
edition = "2021"
description = "Duck is a programming language. Goose runs it. They're best friends (most of the time)."
authors = ["Duck & Goose"]

[[bin]]
name = "goose"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
